--- a/index.html
+++ b/index.html
@@ -1,33 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Alexander Stapleton Portfolio Site</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
-  <body>
-    <h1>Coming Soon!</h1>
-  	<p>I'm updating the site, it be up and running soon!</p>
-  	<p>In the meantime, have a look around my social media profiles!</p>
+  <link rel="stylesheet" href="main.css" type="text/css">
 
-  	<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="alexstapleton13"><a class="LI-simple-link" href='https://www.linkedin.com/in/alexstapleton13?trk=profile-badge'>Alex Stapleton</a></div>
+  <body class="text-white">
 
-  	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="js/bootstrap.min.js"></script>
+    <!--  navbar  -->
+     <nav class="navbar fixed-top navbar-toggleable-md navbar-inverse bg-inverse">
+       <div class="container">
+         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+           <a class="navbar-brand" href="#">AlexanderStapleton.com</a>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav mr-auto">
+             <li class="nav-item active">
+               <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="#about">About</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="#speakers">Blog</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="#schedule">Contact</a>
+             </li>
+           </ul>
+         </div>
+       </div>
+     </nav>
+   <!-- /navbar -->
+
+    <!-- jumbotron -->
+    <div class="jumbotron text-center bg-faded">
+        <h1 class="display-1 mt-5">Coming Soon!!</h1>
+        <h3 class="lead mt-2">Portfolio site of aspiring Front-End Developer and UX Enthousiast Alexander Stapleton.</h3>
+    </div>
+    <!-- /jumbotron -->
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img src="img/iconmonstr-facebook-3.svg">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img src="img/iconmonstr-instagram-13.svg">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img src="img/iconmonstr-linkedin-3.svg">
+            </a>
+          </li>
+          <li class="nav-item">
+            <p class="text-white">&copy;2017 Alexander Stapleton</p>
+          </li>
+        </ul>
+      </div>
+    </footer>
+   <!-- /footer -->
+
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
 </html>
