--- a/index.html
+++ b/index.html
@@ -42,37 +42,22 @@
 
     <!-- jumbotron -->
     <div class="jumbotron text-center bg-faded">
-        <h1 class="display-1 mt-5">Coming Soon!!</h1>
-        <h3 class="lead mt-2">Portfolio site of aspiring Front-End Developer and UX Enthousiast Alexander Stapleton.</h3>
+      <h1 class="display-1 mt-5">Coming Soon!!</h1>
+      <h3 class="lead mt-2">Portfolio site of aspiring Front-End Developer and UX Enthousiast Alexander Stapleton.</h3>
+      <hr>
+      <h3 class="lead mt-2 mb-4">While you wait take a stroll through my social media profiles</h3>
+      <a href="https://www.facebook.com/astapleton">
+        <img src="img/iconmonstr-facebook-3.svg">
+      </a>
+      <a href="https://www.instagram.com/alexanderstapleton/" class="ml-3">
+        <img src="img/iconmonstr-instagram-13.svg">
+      </a>
+      <a href="https://www.linkedin.com/in/alexstapleton13/" class="ml-3">
+        <img src="img/iconmonstr-linkedin-3.svg">
+      </a>
     </div>
     <!-- /jumbotron -->
 
-    <!-- footer -->
-    <footer class="footer">
-      <div class="container">
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="img/iconmonstr-facebook-3.svg">
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="img/iconmonstr-instagram-13.svg">
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="img/iconmonstr-linkedin-3.svg">
-            </a>
-          </li>
-          <li class="nav-item">
-            <p class="text-white">&copy;2017 Alexander Stapleton</p>
-          </li>
-        </ul>
-      </div>
-    </footer>
-   <!-- /footer -->
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
