--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Alexander Stapleton Portfolio Site</title>
+    <title>Alexander Stapleton | Developer/Designer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,7 +43,7 @@
     <!-- jumbotron -->
     <div class="jumbotron text-center bg-faded">
       <h1 class="display-1 mt-5">Coming Soon!!</h1>
-      <h3 class="lead mt-2">Portfolio site of aspiring Front-End Developer and UX Enthousiast Alexander Stapleton.</h3>
+      <h3 class="lead mt-2">Portfolio site of aspiring Front-End Developer and UI/UX Enthousiast Alexander Stapleton.</h3>
       <hr>
       <h3 class="lead mt-2 mb-4">While you wait take a stroll through my social media profiles</h3>
       <a href="https://www.facebook.com/astapleton">
